# raylib-arena

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  notes.md
assets/models/: map.glb  orc.glb
assets/shaders/: lighting.fs
include/: animation.h  camera.h  debug.h  game.h  logger.h  player.h  rlights.h  settings.h  shader_handler.h  terrain.h  utils.h
lib/: raylib.lib
src/: animation.cpp  camera.cpp  debug.cpp  game.cpp  logger.cpp  main.cpp  player.cpp  shader_handler.cpp  terrain.cpp  utils.cpp
